fixing css issue on small heights

--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -363,7 +363,8 @@ li
 			position: static
 			transform: none
 			width: 100%
-	.header
-	.generator
-		height: auto
+	.wrapper
+		.header
+		.generator
+			height: auto
 		
